app/assets/stylesheets/_extensions.scss
.govuk-header {
  &__service-name {
    font-weight: 700;
    font-size: 1.5rem;
  }
}

.govuk-footer {
  border-top: govuk-spacing(2) solid govuk-colour('blue');
}

.govuk-\!-font-numeric {
  @include govuk-font($size: false, $tabular: true);
  letter-spacing: .06em;
}

.address {
  border-left: 1px solid #b1b4b6;
  padding-left: 15px;
  margin-bottom: 30px;
  margin-top: 30px;
}

.govuk-subheader {
  display: flex;
  align-items: center;
  padding: 0 15px;
}

.govuk-breadcrumbs {
  margin-right: 10px;
}

.govuk-language-select {
  margin-left: 10px;
}

.govuk-separator {
  flex-grow: 1;
}

.govuk-feed {

}

